# PSM-NeuroAI-Final

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
notebooks/: dev101.ipynb
reference/: Copy of mcnb_stats2_week01_solution.ipynb  Copy of mcnb_stats2_week02_solution.ipynb  Copy of mcnb_stats2_week03_solution.ipynb  Copy of mcnb_stats2_week04_solution.ipynb  Copy of mcnb_stats2_week05_solution.ipynb
src/psm_final/: __init__.py
src/psm_final/helpers/: MLP.py  __init__.py  pca.py  plotting.py  training_testing.py
