[project]
name = "psm-final"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nilearn>=0.13.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psm_final"]
