[project]
name = "psm-final"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.26,<3",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "torch>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29",
    "jupyter>=1.1.1",
]
neuro = [
    "nilearn>=0.10",
]
vision = [
    "torchinfo>=1.8.0",
    "torchvision>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psm_final"]
